--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Img_txt</name>
+	<name>IMG-2-TXT</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -22,7 +22,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1607170819729</id>
+			<id>1607194227868</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
